# rust-rpc

./: .env  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.rust  README.md  main.rs  rust-toolchain.toml
.cargo/: config.toml
cap-placement/: Cargo.toml
cap-placement/src/: lib.rs
idl/: cap_placement.proto  health.proto
src/: lib.rs
src/layer/: log.rs
src/router/: cap_placement.rs  health.rs  mod.rs
volo-gen/: volo.yml
